# polysemy-servant-prototype

./: .gitignore  README.md  cabal.project  flake.nix
.github/workflows/: fourmolu-ci.yml  hlint-ci.yml  linux-ci.yml  nixos-ci.yml  polysemy-servant-prototype-fourmolu-ci.yml  polysemy-servant-prototype-hlint-ci.yml  polysemy-servant-prototype-linux-build-ci.yml  polysemy-servant-prototype-linux-ci.yml
scripts/: cabal-fmt.sh
src/logger/: logger.cabal
src/logger/src/lib/Log/: LogLevel.hs  Logger.hs  TraceEvent.hs
src/structured-logger/: CHANGELOG.md  LICENSE  strctured-logger.cabal
src/structured-logger/src/lib/Polysemy/Log/: Logging.hs
src/structured-logger/src/lib/Polysemy/Log/Internal/: LogConfig.hs  LogMsg.hs  Logging.hs
src/structured-logger/test/: Spec.hs
src/structured-logger/test/Tests/: NaiveSpecs.hs
src/www/: README.md  www.cabal
src/www/int-test/: http-tests.http
src/www/src/lib/: CLI.hs
src/www/src/lib/API/: ApiResponse.hs  Handlers.hs  Routes.hs  Server.hs  Types.hs  WebSockets.hs
src/www/src/lib/DB/: Database.hs  ItemRepo.hs  LineItemRepository.hs  Schema.hs  UserRepository.hs
src/www/src/lib/Effects/: CLI.hs  Config.hs  Error.hs  Logger.hs
src/www/src/lib/Model/: LineItem.hs  Types.hs  User.hs
src/www/test/: Spec.hs
src/www/test/Tests/: NaiveSpecs.hs
