cabal-version:   3.12
name:            www
version:         0.1.0.0
synopsis:        A polysemy servant http application

-- description:
homepage:        https://kayvank.github.io/cv
license:         BSD-3-Clause
license-file:    LICENSE
author:          Kayvan Kazeminejad
maintainer:      kayvan@q2io.com

-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common base
  build-depends: base >=4.9 && <5

common project-config
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DeriveGeneric
    FlexibleContexts
    GADTs
    LambdaCase
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators

-- -ddump-splices
-- -ddump-deriv

library
  import:           base,project-config
  exposed-modules:
    API.ApiResponse
    API.Handlers
    API.Routes
    API.Server
    DB.Database
    DB.LineItemRepository
    DB.UserRepository
    Effects.CLI
    Effects.Config
    Effects.Error
    Model.LineItem
    Model.User

  build-depends:
    , aeson
    , beam-core
    , beam-migrate
    , beam-sqlite           >=0.5.4.0 && <0.7
    , data-default
    , logger
    , optparse-applicative
    , polysemy
    , resource-pool
    , servant-server
    , sqlite-simple
    , string-interpolate
    , text

  ----------- TODO --------------
  -- ideally we watn 0.7.0, however, that version is not currently available on nix as of 01/May/2026
  ----------- TODO --------------
  hs-source-dirs:   src/lib
  default-language: GHC2021
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Wunused-packages
    -threaded -fno-warn-name-shadowing

executable www
  import:         base,project-config
  main-is:        Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , data-default
    , servant-server
    , wai-extra
    , warp
    , www

  hs-source-dirs: src/bin
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Wunused-packages
    -threaded -fno-warn-name-shadowing -rtsopts -with-rtsopts=-N

test-suite www-test
  import:         base,project-config

  -- other-modules:
  -- other-extensions:
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Wunused-packages
    -threaded -fno-warn-name-shadowing -rtsopts -with-rtsopts=-N

  -- other-modules:  Tests.NaiveSpecs
  build-depends:
    , hspec
    , tasty
    , tasty-hspec

-- , www
